--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,12 @@
   background-color: lightgreen;
   color: black;
 }
+
+.button.destructive {
+  background-color: red;
+}
+
+.button.destructive:hover {
+  background-color: salmon;
+  color: black;
+}
